--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         href="https://www.instagram.com/cihadfedaisi/"
         class="insta"
         target="_blank"
-        ><p id="insta">İnstagram</p></a
+        ><p id="insta">Instagram</p></a
       >
     </div>
   </body>
